--- a/ecmp.html
+++ b/ecmp.html
@@ -492,7 +492,7 @@
             </table>
           </div>
           <br>
-          <button style="margin-top:-5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px"><b>Copy-Paste to Terminal, make sure this Mangle Script on the Top position!</b></span>
+          <button style="margin-top:-5px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button><span style="padding:7px; font-weight:normal;margin-left:10px; font-size:14px"><b>Copy-Paste to Terminal, make sure this Mangle Script on the Top position!</b></span>
         </div>
       </div>
       <div class="footer">
