--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@
       margin-top:20px; 
       text-align:center; 
       font-size:13px;}
+	  
       .show-homepage-menu{
       margin-bottom:3px;	  
       }
@@ -658,7 +659,8 @@
       padding-left:0px;
       padding-right:0px;
       } 
-      .mymenu ul {background: none !important;
+      .mymenu ul {
+	  background: none !important;
       justify-content: center;
       display: flex;
       } 
@@ -983,7 +985,7 @@
         </a>
       </div>
       <div class="footer">  
-	<div style="font-size:12px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:11px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
 	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks.
       </div>
 	  
