--- a/index.html
+++ b/index.html
@@ -745,7 +745,9 @@
         <div class="gcse-searchresults"></div>
       </div>
       <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
-
+	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks. if you agree please continue.
+      </div>
       <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
       <div class="row">
         <div class="column">
@@ -984,11 +986,7 @@
           </div>
         </a>
       </div>
-      <div class="footer">  
-	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks.
-      </div>
-	  
+      <div class="footer">    
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
