--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       b{font-size:15px}
       p {
       padding:0;
-      margin:5px 5px 0 17px;
+      margin:4px 0 0 17px;
       display:list-item;
-      list-style: circle;
+      list-style: disc;
       }
       .logo {
       color: #ddd;
@@ -750,7 +750,7 @@
       <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
 	<div class="disclaimer">
 	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
       </div>
 	  </div>
       <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
