--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
+
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -40,8 +41,14 @@
       padding:0;
       color:#31363A;
       }
-      h1{font-size: 52px; font-weight:600; margin-bottom:0px; color:#31363A;display:inline;clear:both}
-      h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:10px; padding-bottom:10px;}
+      h1{     font-size: 45px;
+
+  text-transform: uppercase;
+  font-weight: normal;
+  line-height: 0.9;  /* line-height, but no margin */
+  margin: 0;}
+
+      h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:5px; padding-bottom:5px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#31363A; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -681,6 +688,7 @@
       font-size: 10pt;
       }
       }
+    
     </style>
   </head>
   <body>
@@ -748,11 +756,6 @@
         <div class="gcse-searchresults"></div>
       </div>
       <h1>MikroTik Router<i>OS</i> Script and Tools</h1>
-	<div class="disclaimer">
-	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
-      </div>
-	  </div>
       <h2>// MIKROTIK <span style="color:#ff6600">[</span> SCRIPT <span style="color:#ff6600">]</span> ROUTEROS DATABASE</h2>
       <div class="row">
         <div class="column">
@@ -991,7 +994,12 @@
           </div>
         </a>
       </div>
-      <div class="footer">    
+      <div class="footer">
+	  	<div class="disclaimer">
+	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+      </div>
+	  </div>
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
