--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       padding:0;
       color:#31363A;
       }
-      h1{     font-size: 45px;
+      h1{     font-size: 52px;
 
-  text-transform: uppercase;
-  font-weight: normal;
-  line-height: 0.9;  /* line-height, but no margin */
+
+  font-weight: 600;
+  line-height: 1.0;  /* line-height, but no margin */
   margin: 0;}
 
-      h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:5px; padding-bottom:5px;}
+      h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:6px; padding-bottom:3px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#31363A; margin-bottom:10px; padding-bottom:10px;}
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
@@ -688,6 +688,7 @@
       font-size: 10pt;
       }
       }
+    
     
     </style>
   </head>
