--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
       padding:0;
       color:#31363A;
       }
-      h1{     font-size: 52px;
+      h1{      font-size: 50px;
 
 
-  font-weight: 600;
+  font-weight: 700;
   line-height: 1.0;  /* line-height, but no margin */
-  margin: 0;}
+  margin-bottom:5px; 
+        margin-top:5px;}
 
       h2{font-weight:bold; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:6px; padding-bottom:3px;}
       h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#31363A; margin-bottom:10px; padding-bottom:10px;}
