--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       padding:0;
       color:#31363A;
       }
-      h1{      font-size: 50px;
-color:#31363A
+      h1{      font-size: 52px;
+color:#31363A;
 
-  font-weight: 700;
+  font-weight: 600;
   line-height: 1.0;  /* line-height, but no margin */
   margin-bottom:7px; 
         margin-top:5px;}
