--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <meta name="yandex-verification" content="2185da3345ca44f7" >
     <script async defer src="https://buttons.github.io/buttons.js"></script>   
     <style>
-
       /* --------------------------------------------
       ################################################
       # Tools For Mikrotik By BuanaNETPBun.Github.io
@@ -41,16 +40,27 @@
       padding:0;
       color:#31363A;
       }
-      h1{      font-size: 52px;
-color:#31363A;
-
-  font-weight: 600;
-  line-height: 1.0;  /* line-height, but no margin */
-  margin-bottom:7px; 
-        margin-top:5px;}
-
-      h2{font-weight:600; font-size:18px; color:#31363A;border-bottom:1px solid #ccc; margin-bottom:6px; padding-bottom:3px;}
-      h3, h4, h5, h6{font-weight:normal; font-size:17px; color:#31363A; margin-bottom:10px; padding-bottom:10px;}
+      h1{
+	  font-size: 52px;
+      color:#31363A;
+      font-weight: 600;
+      line-height: 1.0;  /* line-height, but no margin */
+      margin-bottom:7px; 
+      margin-top:7px;}
+      h2{
+	  font-weight:600; font-size:18px; 
+	  color:#31363A;
+	  border-bottom:1px solid #ccc; 
+	  margin-bottom:6px; 
+	  padding-bottom:3px;
+	  }
+      h3, h4, h5, h6{
+	  font-weight:normal; 
+	  font-size:17px; 
+	  color:#31363A; 
+	  margin-bottom:10px; 
+	  padding-bottom:10px;
+	  }
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
@@ -552,7 +562,6 @@ color:#31363A;
       margin-top:20px; 
       text-align:center; 
       font-size:13px;}
-	  
       .show-homepage-menu{
       margin-bottom:3px;	  
       }
@@ -622,9 +631,9 @@ color:#31363A;
       .footer {margin-bottom:20px}
       }
       @media screen and (max-width:700px){
-	  .disclaimer {
-	  margin-top:15px;
-	  }
+      .disclaimer {
+      margin-top:15px;
+      }
       h1{
       font-size: 35px;
       }
@@ -671,7 +680,7 @@ color:#31363A;
       padding-right:0px;
       } 
       .mymenu ul {
-	  background: none !important;
+      background: none !important;
       justify-content: center;
       display: flex;
       } 
@@ -689,8 +698,6 @@ color:#31363A;
       font-size: 10pt;
       }
       }
-    
-    
     </style>
   </head>
   <body>
@@ -997,11 +1004,11 @@ color:#31363A;
         </a>
       </div>
       <div class="footer">
-	  	<div class="disclaimer">
-	<div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
-	We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
-      </div>
-	  </div>
+        <div class="disclaimer">
+          <div style="font-size:13px;margin-bottom:20px; color:#666; text-align:left"><span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #555; border-right:6px solid #555; color:red;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:5px "><i>Update: (November, 2022)</i></span> 
+            We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. We work independently, not under the auspices of the MikroTik Company, all problems that occur with your router are your own problems and you must accept all the risks. if you <i><u>Agree</u></i> please continue.
+          </div>
+        </div>
         © Copyright 2020-<span id="year">2022</span> <a href="https://buananetpbun.github.io">buananetpbun.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> - Project by <a href="https://www.facebook.com/buananet.pbun">BuanaNet.Pbun</a> 
       </div>
     </div>
