--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
       color:#31363A;
       }
       h1{
-	  font-size: 52px;
+	  font-size:52px;
       color:#31363A;
       font-weight: 600;
-      line-height: 1.0;  /* line-height, but no margin */
+      line-height: 1.0; 
       margin-bottom:7px; 
       margin-top:5px;}
       h2{
