--- a/index.html
+++ b/index.html
@@ -41,26 +41,26 @@
       color:#31363A;
       }
       h1{
-	  font-size:52px;
+      font-size:52px;
       color:#31363A;
       font-weight: 600;
-      line-height: 1.0; 
-      margin-bottom:7px; 
-      margin-top:5px;}
+      line-height: 1.3; 
+      margin:0;
+      }
       h2{
-	  font-weight:600; font-size:18px; 
-	  color:#31363A;
-	  border-bottom:1px solid #ccc; 
-	  margin-bottom:6px; 
-	  padding-bottom:3px;
-	  }
+      font-weight:600; font-size:18px; 
+      color:#31363A;
+      border-bottom:1px solid #ccc; 
+      margin-bottom:6px; 
+      padding-bottom:3px;
+      }
       h3, h4, h5, h6{
-	  font-weight:normal; 
-	  font-size:17px; 
-	  color:#31363A; 
-	  margin-bottom:10px; 
-	  padding-bottom:10px;
-	  }
+      font-weight:normal; 
+      font-size:17px; 
+      color:#31363A; 
+      margin-bottom:10px; 
+      padding-bottom:10px;
+      }
       pre {
       white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
       white-space: -pre-wrap; /* Opera */
