--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
       word-wrap: break-word;
       margin:0;
       padding:0;
-      color:#31363A;
+      color:#292929;
       }
       h1{
       font-size:52px;
-      color:#31363A;
+      color:#292929;
       font-weight: 600;
       line-height: 1.3; 
       margin:0;
       }
       h2{
       font-weight:600; font-size:18px; 
-      color:#31363A;
+      color:#292929;
       border-bottom:1px solid #ccc; 
       margin-bottom:6px; 
       padding-bottom:3px;
@@ -57,7 +57,7 @@
       h3, h4, h5, h6{
       font-weight:normal; 
       font-size:17px; 
-      color:#31363A; 
+      color:#292929; 
       margin-bottom:10px; 
       padding-bottom:10px;
       }
@@ -301,7 +301,7 @@
       }
       .mymenu li a {
       display: block;
-      color: #31363A;
+      color: #292929;
       text-align: center;
       padding: 8px 10px;
       text-decoration: none;
