--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -77,8 +77,10 @@
       .content{
       float:right;
       width:50%;
-      height:480px;
-      padding: 15px;
+      height:450px;
+      padding: 10px;
+	  padding-left:5px;
+	  padding-right:15px;
       border-top:1px solid #bbb; 
       border-bottom:1px solid #bbb; 
       border-right:1px solid #bbb; 
@@ -88,8 +90,9 @@
       .sidebar{
       float:left;
       width:25%;
-      height:480px;
-      padding: 15px;  
+      height:450px;
+      padding: 10px; 
+	  padding-left:15px;
       background-color:#ddd;
       border-left:1px solid #bbb; 
       border-top:1px solid #bbb; 
@@ -99,8 +102,9 @@
       .sidebar2{
       float:left;
       width:25%;
-      height:480px;
-      padding: 15px;
+      height:450px;
+      padding: 10px;
+	  padding-left:5px;
       background-color:#ddd;
       border-top:1px solid #bbb; 
       border-bottom:1px solid #bbb;
@@ -256,7 +260,7 @@
       display: inline-block;
       } 
       .list-mangle {
-      height: 420px;
+      height: 390px;
       background:#fff;
       overflow: auto;
       overflow-x: auto;
@@ -277,7 +281,8 @@
       td, th {
       border: 1px solid #dddddd;
       text-align: left;
-      padding: 8px;
+	  font-size:14px;
+      padding: 7px;
       }
       /* LOGIN Content */
       .forms-out {
@@ -466,22 +471,22 @@
           <label>Burst Limit (K/M)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-speed-bonus" style='color: #01A3DF' value="1M" placeholder="1M" onkeyup="myFunction()" >
         </div>
-        <div style="float:left; width:100%;padding-bottom:30px;">
+        <div style="float:left; width:100%;padding-bottom:25px;">
           <label>Burst Duration (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="up-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
-        <div style="font-size:14px">
+        <div style="font-size:15px">
           <b>Burst Duration Result:</b>
           <div style="display:none">
             <div style="clear:both; margin-top:5px"></div>
             <span style='color: Crimson'>BD</span> = ( <span id="for-up-burst-threshold" style='color: #191970'>384K</span> * <span id="for-up-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-up-burst-limit" style='color: #01A3DF'>1M</span><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-up-burst-duration" style='color: Crimson'>6</span> second<br>
           </div>
-          <div style='background-color:#fff;font-size:13px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green;padding:5px'>
+          <div style='background-color:#fff;font-size:14px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green;padding:5px'>
             <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> in <span id="for-up-burst-duration2" style='color: Crimson'>6</span> second<br>
           </div>
         </div>
-        <div style="margin-top:45px;font-size:11px; font-weight:700;position:absolute">
+        <div style="margin-top:35px;font-size:11px; font-weight:700;position:absolute">
           <span style="font-size:12px"><b>Burst Limit Formula:</b></span><br>
           <div style='color: #555; margin-bottom:3px'>---------------------------------------------------------------------------------</div>
           <span style='color: Crimson'>Burst Duration</span> = ( <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> ) / <span style='color: #01A3DF'>Burst Limit</span><br>
@@ -503,17 +508,17 @@
           <input onkeydown="upperCaseF(this)" type="text" id="down-speed-bonus" style='color: #01A3DF' value="2M" placeholder="2M" onkeyup="myFunction()">
         </div>
         <br>
-        <div style="float:left; width:100%;margin-bottom:30px">
+        <div style="float:left; width:100%;margin-bottom:25px">
           <label>Burst Duration (second)</label><br>
           <input onkeydown="upperCaseF(this)" type="text" id="down-interval-bonus" style='color: Crimson' value="6" placeholder="6" onkeyup="myFunction()">
         </div>
-        <div style="font-size:14px">
+        <div style="font-size:15px">
           <b>Burst Duration Result:</b>
           <div style="display:none">
             <span style='color: Crimson;'>BD</span> = ( <span id="for-down-burst-threshold" style='color: #191970'>750K</span> * <span id="for-down-burst-time" style='color: DarkViolet'>16s</span> ) / <span id="for-down-burst-limit" style='color: #01A3DF'>2M</span><br>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-down-burst-duration" style='color: Crimson'>6</span> second<br>
           </div>
-          <div style='background-color:#fff;font-size:13px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green; padding:5px'>
+          <div style='background-color:#fff;font-size:14px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green; padding:5px'>
             <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> in <span id="for-down-burst-duration2" style='color: Crimson'>6</span> second<br>
           </div>
         </div>
