--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -77,10 +77,11 @@
       .content{
       float:right;
       width:50%;
-      height:450px;
+      height:455px;
       padding: 10px;
 	  padding-left:5px;
 	  padding-right:15px;
+	  padding-top:20px;
       border-top:1px solid #bbb; 
       border-bottom:1px solid #bbb; 
       border-right:1px solid #bbb; 
@@ -90,9 +91,10 @@
       .sidebar{
       float:left;
       width:25%;
-      height:450px;
+      height:455px;
       padding: 10px; 
 	  padding-left:15px;
+	  padding-top:20px;
       background-color:#ddd;
       border-left:1px solid #bbb; 
       border-top:1px solid #bbb; 
@@ -102,9 +104,10 @@
       .sidebar2{
       float:left;
       width:25%;
-      height:450px;
+      height:455px;
       padding: 10px;
 	  padding-left:5px;
+	  padding-top:20px;
       background-color:#ddd;
       border-top:1px solid #bbb; 
       border-bottom:1px solid #bbb;
@@ -483,7 +486,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-up-burst-duration" style='color: Crimson'>6</span> second<br>
           </div>
           <div style='background-color:#fff;font-size:13px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green;padding:5px'>
-            <span style='color: green;' id="new-burst-up">512K</span> to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> in <span id="for-up-burst-duration2" style='color: Crimson'>6</span> second<br>
+            <span style='color: green;' id="new-burst-up">512K</span> up to <span id="for-up-burst-limit2" style='color: #01A3DF'>1M</span> in <span id="for-up-burst-duration2" style='color: Crimson'>6</span> second<br>
           </div>
         </div>
         <div style="margin-top:30px;font-size:11px; font-weight:700;position:absolute">
@@ -519,7 +522,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= <span id="for-down-burst-duration" style='color: Crimson'>6</span> second<br>
           </div>
           <div style='background-color:#fff;font-size:13px; font-weight:bold;margin-top:5px;border-bottom:1px dotted green;border-top:1px dotted green; padding:5px'>
-            <span style='color:green;' id="new-burst-down">1M</span> to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> in <span id="for-down-burst-duration2" style='color: Crimson'>6</span> second<br>
+            <span style='color:green;' id="new-burst-down">1M</span> up to <span id="for-down-burst-limit2" style='color: #01A3DF'>2M</span> in <span id="for-down-burst-duration2" style='color: Crimson'>6</span> second<br>
           </div>
         </div>
       </div>
