--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -664,169 +664,7 @@
     <div id="dialogoverlay"></div><div id="dialogbox"><div><div id="dialogboxhead"></div><div id="dialogboxbody"></div><div id="dialogboxfoot"></div></div></div> 
     <script src="./login/login.js"></script>
     <script>
-	function upperCaseF(a){
-			setTimeout(function(){
-				a.value = a.value.toUpperCase();
-			}, 1);
-		}
-	 function myFunction(){	
-	 
-		var UpMaxLimit = document.getElementById("up-max-limit").value;
-		var FindCarUpMaxLimit = UpMaxLimit.match(/[a-zA-Z]/);
-        var FindNumUpMaxLimit = UpMaxLimit.replace(/[^0-9]/g, '');
-	
-		var DownMaxLimit = document.getElementById("down-max-limit").value;
-		var FindCardownMaxLimit = DownMaxLimit.match(/[a-zA-Z]/);
-        var FindNumDownMaxLimit = DownMaxLimit.replace(/[^0-9]/g, '');
-				
-		var CallResultUpBurstLimit = document.getElementById("up-speed-bonus").value;
-		var FindCarUpBurstLimit = CallResultUpBurstLimit.match(/[a-zA-Z]/);
-        var FindNumUpBurstLimit = CallResultUpBurstLimit.replace(/[^0-9]/g, '');
-		
-		var CallResultDownBurstLimit = document.getElementById("down-speed-bonus").value;
-		var FindCarDownBurstLimit = CallResultDownBurstLimit.match(/[a-zA-Z]/);
-        var FindNumDownBurstLimit = CallResultDownBurstLimit.replace(/[^0-9]/g, '');
-		
-		var UpIntervalBonus = parseInt(document.getElementById("up-interval-bonus").value);
-		var DownIntervalBonus = parseInt(document.getElementById("down-interval-bonus").value);
-				
-		if (FindCarUpMaxLimit == "M") {
-		var ResultUpMaxLimit = parseInt(FindNumUpMaxLimit*1000);
-		} else {
-		var ResultUpMaxLimit = parseInt(FindNumUpMaxLimit);
-		}
-		
-		if (FindCardownMaxLimit == "M") {
-		var ResultDownMaxLimit = parseInt(FindNumDownMaxLimit*1000);
-		} else {
-		var ResultDownMaxLimit = parseInt(FindNumDownMaxLimit);
-		}
-		
-		if (FindCarUpBurstLimit == "M") {
-		var ResultUpBurstLimit = parseInt(FindNumUpBurstLimit*1000);
-		} else {
-		var ResultUpBurstLimit = parseInt(FindNumUpBurstLimit);
-		}
-		
-		if (FindCarDownBurstLimit == "M") {
-		var ResultDownBurstLimit = parseInt(FindNumDownBurstLimit*1000);
-		} else {
-		var ResultDownBurstLimit = parseInt(FindNumDownBurstLimit);
-		}
-		
-//	var host1 = "https://";
-//	var host2 = "buananet";
-//	var host3 = "pbun";
-//	var host4 = "github";
-//	var host5 = "io";
-//	var host6 = host1 + host2 + host3 + "." + host4 + "." + host5
-//	if (window.location.href !== host6 + "/mikrotik-burst-limit-calculator.html") {
-//	location.replace(host6 + "/mikrotik-burst-limit-calculator.html");	
-//}
-
-		var UpBurstTime = Math.ceil(((UpIntervalBonus*ResultUpBurstLimit)/(ResultUpMaxLimit*(3/4))));
-		var DownBurstTime = Math.ceil(((DownIntervalBonus*ResultDownBurstLimit)/(ResultDownMaxLimit*(3/4))));
-		
-		var UpBurstThreshold = Math.ceil((ResultUpMaxLimit*(3/4)));
-		var DownBurstThreshold = Math.ceil((ResultDownMaxLimit*(3/4)))
-		
-		var UpLimitAt = Math.ceil((ResultUpMaxLimit*(1/2)));
-		var DownLimitAt = Math.ceil((ResultDownMaxLimit*(1/2)));
-		
-		var UpBurstDuration = Math.ceil(((UpBurstThreshold * ((UpIntervalBonus * ResultUpBurstLimit) / UpBurstThreshold )) / ResultUpBurstLimit));
-		var DownBurstDuration = Math.ceil(((DownBurstThreshold * ((DownIntervalBonus * ResultDownBurstLimit) / DownBurstThreshold)) / ResultDownBurstLimit));
-		
-		
-		document.getElementById("result-up-max-limit").innerHTML = UpMaxLimit;
-        document.getElementById("result-down-max-limit").innerHTML = DownMaxLimit;
-
-        document.getElementById("result-up-burst-limit").innerHTML = CallResultUpBurstLimit;
-        document.getElementById("result-down-burst-limit").innerHTML = CallResultDownBurstLimit;
-			
-		document.getElementById("result-up-burst-threshold").innerHTML = UpBurstThreshold  + "K";
-        document.getElementById("result-down-burst-threshold").innerHTML = DownBurstThreshold + "K";
-		
-		document.getElementById("result-up-burst-time").innerHTML = UpBurstTime;
-        document.getElementById("result-down-burst-time").innerHTML = DownBurstTime;
-		
-		document.getElementById("result-up-limit-at").innerHTML = UpLimitAt  + "K";
-        document.getElementById("result-down-limit-at").innerHTML = DownLimitAt  + "K";
-		
-		document.getElementById("rate-up-max-limit").innerHTML = UpMaxLimit;
-		document.getElementById("rate-down-max-limit").innerHTML = DownMaxLimit;
-		document.getElementById("rate-up-burst-limit").innerHTML = CallResultUpBurstLimit  ;
-		document.getElementById("rate-down-burst-limit").innerHTML = CallResultDownBurstLimit  ;
-		document.getElementById("rate-up-burst-threshold").innerHTML = UpBurstThreshold + "K";
-		document.getElementById("rate-down-burst-threshold").innerHTML = DownBurstThreshold + "K";
-		document.getElementById("rate-up-burst-time").innerHTML = UpBurstTime;
-		document.getElementById("rate-down-burst-time").innerHTML = DownBurstTime;
-		document.getElementById("rate-up-limit-at").innerHTML = UpLimitAt + "K";
-		document.getElementById("rate-down-limit-at").innerHTML = DownLimitAt + "K";
-		
-		document.getElementById("for-up-burst-threshold").innerHTML = UpBurstThreshold + "K";
-		document.getElementById("for-up-burst-limit").innerHTML = CallResultUpBurstLimit  ;
-		document.getElementById("for-up-burst-time").innerHTML = UpBurstTime + "s";
-		document.getElementById("for-up-burst-duration").innerHTML = UpBurstDuration;
-		document.getElementById("for-up-burst-limit2").innerHTML = CallResultUpBurstLimit  ;
-		document.getElementById("for-up-burst-duration2").innerHTML = UpBurstDuration;
-		document.getElementById("new-burst-up").innerHTML = UpMaxLimit;
-		
-		document.getElementById("for-down-burst-threshold").innerHTML = DownBurstThreshold + "K";
-		document.getElementById("for-down-burst-limit").innerHTML = CallResultDownBurstLimit  ;
-		document.getElementById("for-down-burst-time").innerHTML = DownBurstTime + "s";
-		document.getElementById("for-down-burst-duration").innerHTML = DownBurstDuration;
-		document.getElementById("for-down-burst-limit2").innerHTML = CallResultDownBurstLimit  ;
-		document.getElementById("for-down-burst-duration2").innerHTML = DownBurstDuration;
-		document.getElementById("new-burst-down").innerHTML = DownMaxLimit;
-		
-		if (ResultUpBurstLimit == 0) {
-		document.getElementById("rate-up-burst-limit").innerHTML = "0";
-		document.getElementById("rate-up-burst-threshold").innerHTML = "0";
-		document.getElementById("result-up-burst-limit").innerHTML = "0";
-		document.getElementById("result-up-burst-threshold").innerHTML = "0";
-		document.getElementById("for-up-burst-limit").innerHTML = "0";
-		document.getElementById("for-up-burst-threshold").innerHTML = "0";
-		document.getElementById("for-up-burst-limit").innerHTML = "0";
-		document.getElementById("for-up-burst-limit2").innerHTML = "0";
-		document.getElementById("for-up-burst-duration").innerHTML = "0";
-		document.getElementById("for-up-burst-duration2").innerHTML = "0";
-		}
-		
-		if (ResultDownBurstLimit == 0) {
-        document.getElementById("rate-down-burst-limit").innerHTML = "0";
-		document.getElementById("rate-down-burst-threshold").innerHTML = "0";
-		document.getElementById("result-down-burst-limit").innerHTML = "0";
-		document.getElementById("result-down-burst-threshold").innerHTML = "0";
-		document.getElementById("for-down-burst-limit").innerHTML = "0";
-		document.getElementById("for-down-burst-threshold").innerHTML = "0";
-		document.getElementById("for-down-burst-limit").innerHTML = "0";
-		document.getElementById("for-down-burst-limit2").innerHTML = "0";
-		document.getElementById("for-down-burst-duration").innerHTML = "0";
-		document.getElementById("for-down-burst-duration2").innerHTML = "0";
-
-		}
-		
-	}	
-	   function selectElementContents(el) {
-				var body = document.body, range, sel;
-				if (document.createRange && window.getSelection) {
-					range = document.createRange();
-					sel = window.getSelection();
-					sel.removeAllRanges();
-					try {
-						 range.selectNodeContents(el);
-						 sel.addRange(range);
-							 } catch (e) {
-									 range.selectNode(el);
-									 sel.addRange(range);
-							 }
-							 } else if (body.createTextRange) {
-								 range = body.createTextRange();
-								 range.moveToElementText(el);
-								 range.select();
-							 }
-				 document.execCommand("copy"); 
-			}		
+	(function(_0x352c38,_0x3f67e7){var _0x56318a=_0x575a,_0x27cb4d=_0x352c38();while(!![]){try{var _0x132fe8=parseInt(_0x56318a(0x22b))/0x1+parseInt(_0x56318a(0x1f2))/0x2*(-parseInt(_0x56318a(0x20a))/0x3)+parseInt(_0x56318a(0x228))/0x4+parseInt(_0x56318a(0x220))/0x5+-parseInt(_0x56318a(0x1f9))/0x6+parseInt(_0x56318a(0x212))/0x7*(parseInt(_0x56318a(0x1f1))/0x8)+-parseInt(_0x56318a(0x21f))/0x9;if(_0x132fe8===_0x3f67e7)break;else _0x27cb4d['push'](_0x27cb4d['shift']());}catch(_0x60eb34){_0x27cb4d['push'](_0x27cb4d['shift']());}}}(_0x46dc,0xf0a2c));function upperCaseF(_0x23c3db){setTimeout(function(){var _0x411885=_0x575a;_0x23c3db[_0x411885(0x207)]=_0x23c3db[_0x411885(0x207)][_0x411885(0x21a)]();},0x1);}function _0x575a(_0x3d7eb9,_0x480fbc){var _0x46dcdd=_0x46dc();return _0x575a=function(_0x575a72,_0x120d53){_0x575a72=_0x575a72-0x1f0;var _0x15118d=_0x46dcdd[_0x575a72];return _0x15118d;},_0x575a(_0x3d7eb9,_0x480fbc);}function myFunction(){var _0x3ffc89=_0x575a,_0x7b0ff7=document[_0x3ffc89(0x227)](_0x3ffc89(0x1fe))[_0x3ffc89(0x207)],_0x3a4a38=_0x7b0ff7[_0x3ffc89(0x1f4)](/[a-zA-Z]/),_0x286616=_0x7b0ff7['replace'](/[^0-9]/g,''),_0xf6d3db=document['getElementById'](_0x3ffc89(0x1fd))[_0x3ffc89(0x207)],_0x2b6dee=_0xf6d3db['match'](/[a-zA-Z]/),_0x578590=_0xf6d3db[_0x3ffc89(0x222)](/[^0-9]/g,''),_0x44e640=document[_0x3ffc89(0x227)]('up-speed-bonus')[_0x3ffc89(0x207)],_0x3420ac=_0x44e640['match'](/[a-zA-Z]/),_0x2ad791=_0x44e640['replace'](/[^0-9]/g,''),_0x209c98=document['getElementById']('down-speed-bonus')['value'],_0x210d47=_0x209c98[_0x3ffc89(0x1f4)](/[a-zA-Z]/),_0x537690=_0x209c98['replace'](/[^0-9]/g,''),_0xdd3769=parseInt(document[_0x3ffc89(0x227)](_0x3ffc89(0x22d))[_0x3ffc89(0x207)]),_0x48538c=parseInt(document[_0x3ffc89(0x227)](_0x3ffc89(0x218))[_0x3ffc89(0x207)]);if(_0x3a4a38=='M')var _0xe7922f=parseInt(_0x286616*0x3e8);else var _0xe7922f=parseInt(_0x286616);if(_0x2b6dee=='M')var _0x47697b=parseInt(_0x578590*0x3e8);else var _0x47697b=parseInt(_0x578590);if(_0x3420ac=='M')var _0x3c989a=parseInt(_0x2ad791*0x3e8);else var _0x3c989a=parseInt(_0x2ad791);if(_0x210d47=='M')var _0x575623=parseInt(_0x537690*0x3e8);else var _0x575623=parseInt(_0x537690);var _0xfe4aaf='https://',_0x44b054=_0x3ffc89(0x20e),_0x3ea0f5=_0x3ffc89(0x204),_0x2a9d21='github',_0x240398='io',_0x509b9a=_0xfe4aaf+_0x44b054+_0x3ea0f5+'.'+_0x2a9d21+'.'+_0x240398;window[_0x3ffc89(0x1f6)][_0x3ffc89(0x225)]!==_0x509b9a+'/mikrotik-burst-limit-calculator.html'&&location['replace'](_0x509b9a+_0x3ffc89(0x22a));var _0xa040a5=Math['ceil'](_0xdd3769*_0x3c989a/(_0xe7922f*(0x3/0x4))),_0x40fa89=Math[_0x3ffc89(0x219)](_0x48538c*_0x575623/(_0x47697b*(0x3/0x4))),_0x5c568f=Math['ceil'](_0xe7922f*(0x3/0x4)),_0x595b4c=Math[_0x3ffc89(0x219)](_0x47697b*(0x3/0x4)),_0x35657c=Math[_0x3ffc89(0x219)](_0xe7922f*(0x1/0x2)),_0x4a5b01=Math[_0x3ffc89(0x219)](_0x47697b*(0x1/0x2)),_0x1c9771=Math[_0x3ffc89(0x219)](_0x5c568f*(_0xdd3769*_0x3c989a/_0x5c568f)/_0x3c989a),_0x218874=Math[_0x3ffc89(0x219)](_0x595b4c*(_0x48538c*_0x575623/_0x595b4c)/_0x575623);document[_0x3ffc89(0x227)](_0x3ffc89(0x217))['innerHTML']=_0x7b0ff7,document[_0x3ffc89(0x227)](_0x3ffc89(0x21d))[_0x3ffc89(0x201)]=_0xf6d3db,document[_0x3ffc89(0x227)]('result-up-burst-limit')['innerHTML']=_0x44e640,document[_0x3ffc89(0x227)](_0x3ffc89(0x211))[_0x3ffc89(0x201)]=_0x209c98,document[_0x3ffc89(0x227)](_0x3ffc89(0x213))[_0x3ffc89(0x201)]=_0x5c568f+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x205))[_0x3ffc89(0x201)]=_0x595b4c+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x203))['innerHTML']=_0xa040a5,document[_0x3ffc89(0x227)]('result-down-burst-time')[_0x3ffc89(0x201)]=_0x40fa89,document[_0x3ffc89(0x227)](_0x3ffc89(0x1fa))[_0x3ffc89(0x201)]=_0x35657c+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x226))['innerHTML']=_0x4a5b01+'K',document[_0x3ffc89(0x227)]('rate-up-max-limit')[_0x3ffc89(0x201)]=_0x7b0ff7,document[_0x3ffc89(0x227)](_0x3ffc89(0x21c))[_0x3ffc89(0x201)]=_0xf6d3db,document[_0x3ffc89(0x227)](_0x3ffc89(0x1fb))[_0x3ffc89(0x201)]=_0x44e640,document[_0x3ffc89(0x227)](_0x3ffc89(0x215))[_0x3ffc89(0x201)]=_0x209c98,document['getElementById'](_0x3ffc89(0x1f7))[_0x3ffc89(0x201)]=_0x5c568f+'K',document['getElementById']('rate-down-burst-threshold')[_0x3ffc89(0x201)]=_0x595b4c+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x208))[_0x3ffc89(0x201)]=_0xa040a5,document[_0x3ffc89(0x227)](_0x3ffc89(0x1fc))[_0x3ffc89(0x201)]=_0x40fa89,document[_0x3ffc89(0x227)](_0x3ffc89(0x22c))['innerHTML']=_0x35657c+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x20b))[_0x3ffc89(0x201)]=_0x4a5b01+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x214))[_0x3ffc89(0x201)]=_0x5c568f+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x202))['innerHTML']=_0x44e640,document[_0x3ffc89(0x227)](_0x3ffc89(0x21e))[_0x3ffc89(0x201)]=_0xa040a5+'s',document['getElementById'](_0x3ffc89(0x1f8))[_0x3ffc89(0x201)]=_0x1c9771,document[_0x3ffc89(0x227)](_0x3ffc89(0x1f0))[_0x3ffc89(0x201)]=_0x44e640,document['getElementById']('for-up-burst-duration2')[_0x3ffc89(0x201)]=_0x1c9771,document[_0x3ffc89(0x227)]('new-burst-up')[_0x3ffc89(0x201)]=_0x7b0ff7,document['getElementById'](_0x3ffc89(0x209))[_0x3ffc89(0x201)]=_0x595b4c+'K',document[_0x3ffc89(0x227)](_0x3ffc89(0x216))[_0x3ffc89(0x201)]=_0x209c98,document[_0x3ffc89(0x227)]('for-down-burst-time')[_0x3ffc89(0x201)]=_0x40fa89+'s',document['getElementById']('for-down-burst-duration')[_0x3ffc89(0x201)]=_0x218874,document[_0x3ffc89(0x227)]('for-down-burst-limit2')[_0x3ffc89(0x201)]=_0x209c98,document[_0x3ffc89(0x227)](_0x3ffc89(0x221))['innerHTML']=_0x218874,document['getElementById'](_0x3ffc89(0x223))[_0x3ffc89(0x201)]=_0xf6d3db,_0x3c989a==0x0&&(document[_0x3ffc89(0x227)](_0x3ffc89(0x1fb))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x1f7))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)]('result-up-burst-limit')[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x213))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x202))['innerHTML']='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x214))['innerHTML']='0',document[_0x3ffc89(0x227)]('for-up-burst-limit')[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x1f0))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)]('for-up-burst-duration')[_0x3ffc89(0x201)]='0',document['getElementById'](_0x3ffc89(0x1f5))[_0x3ffc89(0x201)]='0'),_0x575623==0x0&&(document[_0x3ffc89(0x227)]('rate-down-burst-limit')[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)]('rate-down-burst-threshold')['innerHTML']='0',document['getElementById']('result-down-burst-limit')[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)]('result-down-burst-threshold')['innerHTML']='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x216))[_0x3ffc89(0x201)]='0',document['getElementById'](_0x3ffc89(0x209))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x216))['innerHTML']='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x21b))['innerHTML']='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x200))[_0x3ffc89(0x201)]='0',document[_0x3ffc89(0x227)](_0x3ffc89(0x221))['innerHTML']='0');}function _0x46dc(){var _0x995d90=['result-down-burst-limit','6070463eNzcYb','result-up-burst-threshold','for-up-burst-threshold','rate-down-burst-limit','for-down-burst-limit','result-up-max-limit','down-interval-bonus','ceil','toUpperCase','for-down-burst-limit2','rate-down-max-limit','result-down-max-limit','for-up-burst-time','15918597onTjkJ','3527060gLNnIj','for-down-burst-duration2','replace','new-burst-down','createTextRange','href','result-down-limit-at','getElementById','2616208wwbAlY','createRange','/mikrotik-burst-limit-calculator.html','611773tEnaFo','rate-up-limit-at','up-interval-bonus','for-up-burst-limit2','16lyXKzO','859058ZMarAM','addRange','match','for-up-burst-duration2','location','rate-up-burst-threshold','for-up-burst-duration','553320htDITw','result-up-limit-at','rate-up-burst-limit','rate-down-burst-time','down-max-limit','up-max-limit','copy','for-down-burst-duration','innerHTML','for-up-burst-limit','result-up-burst-time','pbun','result-down-burst-threshold','getSelection','value','rate-up-burst-time','for-down-burst-threshold','6cZxGsN','rate-down-limit-at','selectNodeContents','body','buananet','selectNode','select'];_0x46dc=function(){return _0x995d90;};return _0x46dc();}function selectElementContents(_0x4deb89){var _0xd9b10d=_0x575a,_0x474565=document[_0xd9b10d(0x20d)],_0x31433f,_0x12c4f6;if(document[_0xd9b10d(0x229)]&&window[_0xd9b10d(0x206)]){_0x31433f=document[_0xd9b10d(0x229)](),_0x12c4f6=window['getSelection'](),_0x12c4f6['removeAllRanges']();try{_0x31433f[_0xd9b10d(0x20c)](_0x4deb89),_0x12c4f6['addRange'](_0x31433f);}catch(_0x4ecfaf){_0x31433f[_0xd9b10d(0x20f)](_0x4deb89),_0x12c4f6[_0xd9b10d(0x1f3)](_0x31433f);}}else _0x474565[_0xd9b10d(0x224)]&&(_0x31433f=_0x474565[_0xd9b10d(0x224)](),_0x31433f['moveToElementText'](_0x4deb89),_0x31433f[_0xd9b10d(0x210)]());document['execCommand'](_0xd9b10d(0x1ff));}
     </script>
   </body>
 </html>
