--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -101,14 +101,14 @@
       .sidebar{
       float:left;
       width:50%;
-      height:280px;
+      height:272px;
       border-right:1px solid #aaa;
       padding-right:15px;
       }
       .sidebar2{
       float:left;
       width:50%;
-      height:280px;
+      height:272px;
       padding-left:15px;
       }
       .footer{
@@ -515,11 +515,11 @@
         </div>
       </div>
         <div style="clear:both"></div>
-        <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:40px;font-size:11px; font-weight:700;">
-          <span style="font-size:12px"><b>Burst Limit Formula:</b></span><br>
-          <div style='color: #555; margin-bottom:3px'>---------------------------------------------------------------------------------</div>
+        <div style="border-radius:5px; background-color:#ccc;padding:10px; margin-top:40px;font-size:12px; font-weight:700;">
+          <span style="font-size:12px"><b>Burst Duration Formula:</b></span><br>
+          <div style='color: #555; margin-bottom:3px'>------------------------------------------------------------------------------</div>
           <span style='color: Crimson'>Burst Duration</span> = <span style='color: #191970'>Burst Threshold</span> * <span style='color: DarkViolet'>Burst Time</span> / <span style='color: #01A3DF'>Burst Limit</span><br>
-          <div style='color: #555'>---------------------------------------------------------------------------------</div>
+          <div style='color: #555'>------------------------------------------------------------------------------</div>
           <div style="margin-top:5px; font-weight:normal">
             <span style='color: #555; font-size:11px'>Burst Threshold = Max Limit * 3/4</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='text-align:right;color: #555; font-size:11px'>K = Kbps  /  M = Mbps</span><br>
             <span style='color: #555; font-size:11px'>Limit At = Max Limit * 1/2</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style='color: #555; font-size:11px'>Convert 1000Kbps = 1Mbps</span><br>
